Issue-56: fix the attachment alignment issue

--- a/style.v1.02.css
+++ b/style.v1.02.css
@@ -388,7 +388,7 @@ nav div::-webkit-scrollbar-track {
     white-space: nowrap;
     text-overflow: ellipsis;
     max-width: 200px;
-    display: inline-block;
+    display: inline;
 }
 
 
